--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "build:marketing": "cd marketing-ui-v1.0.0/ && npm install && npx tailwindcss -i ./src/input.css -o ./dist/output.css",
     "build": "npm run build:marketing",
-    "index": "indexifier ./ --extensions .html,.htm",
+    "indexer": "node indexer.js",
     "serve": "serve ."
   },
   "devDependencies": {
